<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.condos</groupId>
    <artifactId>condos-admin</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>condos-admin</name>

    <modules>
        <module>shared-lib</module>
        <module>auth-api</module>
        <module>tenant-api</module>
        <module>user-api</module>
        <module>board-api</module>
        <!-- luego: tenant-api, user-api, board-api, task-api, etc. -->
    </modules>

    <properties>
        <java.version>17</java.version>
        <spring-boot.version>3.3.3</spring-boot.version>
        <jjwt.version>0.11.5</jjwt.version>
        <!-- importante para @PathVariable sin nombre -->
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <parameters>${maven.compiler.parameters}</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>